fix(theme): search result text align bug in Safari

--- a/packages/theme-default/src/components/SearchBar.less
+++ b/packages/theme-default/src/components/SearchBar.less
@@ -88,7 +88,7 @@
         display: inline-block;
         max-width: 50%;
         padding-right: 26px;
-        vertical-align: -0.37em;
+        vertical-align: bottom;
         overflow: hidden;
         text-overflow: ellipsis;
         opacity: 0.8;
@@ -117,6 +117,7 @@
   &-highlight {
     padding: 2px 0;
     color: #736b2d;
+    vertical-align: bottom;
     background: #fff9cb;
 
     [data-prefers-color=dark] & {
